# tuki-analytics

./: .env  README.md  pyproject.toml
dbt_youtube/: .user.yml  dbt_project.yml  profiles.yml
dbt_youtube.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dbt_youtube/models/bronze/: br_channels.sql  schema.yml
dbt_youtube/models/gold/: g_channel_overview.sql  g_playlist_performance.sql  g_upload_heatmap.sql  schema.yml
dbt_youtube/models/silver/: schema.yml  stg_channels.sql  stg_playlists.sql
dbt_youtube/seeds/: playlists.csv
dbt_youtube/snapshots/: snp_playlist.sql  snp_video.sql
dbt_youtube_dag/: Dockerfile
dbt_youtube_dag/.astro/: config.yaml
dbt_youtube_dag/dags/: dbt_dag.py
dbt_youtube_dag/dbt/dbt_youtube/: package-lock.yml
dbt_youtube_dag/dbt/dbt_youtube/models/bronze/: br_playlist_items.sql  br_playlists.sql  br_video_stats.sql
dbt_youtube_dag/dbt/dbt_youtube/models/gold/: g_content_mix.sql  g_duration_distribution.sql  g_video_rankings.sql
dbt_youtube_dag/dbt/dbt_youtube/models/silver/: stg_videos.sql
dbt_youtube_dag/dbt/dbt_youtube/seeds/: video_stats.csv
python-get-data/: .env  get-data.ipynb
python-get-data/data/: channels.csv  playlist_items.csv
snowflake-create-wh/: create-wh.sql  snowflake-account.txt
