[project]
name = "dbt-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dbt-core>=1.8.7",
    "dbt-snowflake>=1.8.4",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.182.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.29.5",
    "pandas>=2.0.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}  # Tự động tìm tất cả packages